# world-cup-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.pipeline  PRODUCT.md  README.md  pyproject.toml  render.yaml
.impeccable/live/: config.json
data/groups/: groups_full_2026-06-11.csv  groups_history_2026-06-11.csv  groups_history_2026-06-14.csv  groups_history_bayes_2026-06-11.csv  groups_history_bayes_2026-06-12.csv  groups_history_bayes_2026-06-13.csv  groups_history_bayes_2026-06-14.csv  groups_history_bayes_2026-06-15.csv  groups_history_bayes_2026-06-16.csv  groups_history_bayes_2026-06-17.csv  groups_history_bayes_2026-06-18.csv  (+95 more)
docs/: aws-migration-plan.md  bayesian-confederation-plan.md  bayesian-engine.md  bayesian-phase-b-plan.md  connectivity-shrinkage-experiment.md  connectivity.md  data-sources.md  elo-engine-plan.md  elo-engine-tuning.md  elo-engine.md  engine-tuning-2026-06.md  engines-runtime.md  handoff-webapp-infra-fixes.md  known-limitations.md  model-explained.md  model-robustness-plan.md  models-explained.md  next-steps.md  pick-strategy.md  sofascore.md  webapp-public-deploy-plan.md  whitepaper.html  whitepaper_bayes.html  whitepaper_dc_en.html  whitepaper_elo.html  whitepaper_en.html
scripts/: bayes_canaries.py  build_thirds_table.py  compare_bayes.py  daily_publish.sh  enrich_picks_mode.py  enrich_picks_outcome.py  export_static.py  fetch_elo.py  fetch_odds.py  fetch_sofascore.py  fetch_xg.py  gate_b2.py  generate_predictions.sh  generate_rankings.sh  run_webapp.sh  smoke.sh  update_data.sh
tests/: test_tournament.py
wcpred/: __init__.py  anchor.py  backtest.py  cli.py  confederations.py  config.py  data.py  groups.py  model.py  model_bayes.py  model_elo.py  odds.py  predict.py  scoring.py  thirds_table.py  tournament.py
webapp/: server.py
(+507 files in other folders)
