[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wcpred"
version = "1.0.0"
description = "World Cup score predictor optimised for Superbru scoring"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "numpy>=1.23", "scipy>=1.9"]

[project.scripts]
wcpred = "wcpred.cli:main"

[tool.setuptools]
packages = ["wcpred"]
