[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wcpred"
version = "1.0.0"
description = "World Cup score predictor optimised for Superbru scoring"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "curl-cffi>=0.13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# Bayesian Dixon-Coles engine (`--engine bayes`). Needs CmdStan + a C++
# toolchain: after `pip install -e ".[bayes]"`, run once
# `python -c "import cmdstanpy; cmdstanpy.install_cmdstan()"`.
bayes = [
    "cmdstanpy>=1.2",
]

[project.scripts]
wcpred = "wcpred.cli:main"

[tool.setuptools]
packages = ["wcpred"]
include-package-data = true

[tool.setuptools.package-data]
wcpred = ["stan/*.stan"]
